Removing GranularityApiParam enum
