# api/rhsm-subscriptions-api-spec.yaml
@@ -183,7 +183,7 @@ paths:
           in: query
           required: true
           schema:
-            $ref: '#/components/schemas/GranularityApiParam'
+            $ref: '#/components/schemas/Granularity'
           description: "The level of granularity to return."
         - name: sla
           in: query
@@ -305,7 +305,7 @@ paths:
           in: query
           required: true
           schema:
-            $ref: '#/components/schemas/GranularityApiParam'
+            $ref: '#/components/schemas/Granularity'
           description: "The level of granularity to return."
         - name: sla
           in: query
@@ -658,9 +658,6 @@ components:
             $ref: "#/components/schemas/Errors"
   schemas:
     Granularity:
-      type: string
-      enum: [ DAILY, WEEKLY, MONTHLY, QUARTERLY, YEARLY ]
-    GranularityApiParam:
       type: string
       enum: [ DAILY, WEEKLY, MONTHLY, QUARTERLY, YEARLY ]
     ServiceLevel:
